samples/_failures_safe/1761492377_99e3b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_095fdbe3.c: In function ‘main’:
./samples/SAFE/__tmp_095fdbe3.c:158:13: error: expected expression at end of input
  158 |             sizeof
      |             ^~~~~~
./samples/SAFE/__tmp_095fdbe3.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_095fdbe3.c:158:13: error: expected declaration or statement at end of input
